# rankedenumprojections

./: CMakeLists.txt  README.md  main.cpp
algorithm/: algorithm.cpp  algorithm.h
utils/: config.h
